# TestPlugin1

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md
.claude/skills/: bc-create-plugin.md  bc-validate.md  new-plugin.md  start.md
.claude/skills/bc-create-plugin/: SKILL.md
.claude/skills/bc-validate/: SKILL.md
beatconnect-sdk/activation/: CMakeLists.txt
beatconnect-sdk/activation/include/beatconnect/: AssetDownloader.h
beatconnect-sdk/activation/src/: Activation.cpp  AssetDownloader.cpp  MachineId.cpp
beatconnect-sdk/cmake/: BeatConnectPlugin.cmake
beatconnect-sdk/docs/: architecture.md  patterns.md  projucer-to-cmake.md
beatconnect-sdk/example-plugin/: .gitignore  CMakeLists.txt
beatconnect-sdk/example-plugin-native/: .gitignore
beatconnect-sdk/example-plugin-native/Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
beatconnect-sdk/example-plugin/Source/: PluginEditor.h  PluginProcessor.cpp
beatconnect-sdk/example-plugin/web-ui/: index.html  package.json  vite.config.ts
beatconnect-sdk/example-plugin/web-ui/src/: App.tsx  index.css
beatconnect-sdk/templates/: CMakeLists.txt  RootCMakeLists.txt
beatconnect-sdk/templates/.github/workflows/: build.yml
beatconnect-sdk/templates/Source/: PluginEditor.h  PluginProcessor.h  PresetManager.h
beatconnect-sdk/templates/web-ui/: index.html  package.json
beatconnect-sdk/templates/web-ui/src/: index.css
beatconnect-sdk/templates/web-ui/src/hooks/: useJuceParam.ts
beatconnect-sdk/templates/web-ui/src/lib/: juce-bridge.ts
cmake/: BeatConnectPlugin.cmake
docs/: best-practices.md  integration.md
example-plugin/: CMakeLists.txt
example-plugin-native/: CMakeLists.txt
example-plugin-native/Source/: PluginEditor.h  PluginProcessor.h
example-plugin/Source/: ParameterIDs.h  PluginEditor.cpp  PluginProcessor.h
example-plugin/web-ui/: package-lock.json
example-plugin/web-ui/src/: App.tsx  index.css
example-plugin/web-ui/src/hooks/: useJuceParam.ts
plugin/: CMakeLists.txt
plugin/Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/web-ui/: index.html  package-lock.json  package.json  vite.config.ts
plugin/web-ui/src/: App.tsx  index.css
plugin/web-ui/src/hooks/: useJuceParam.ts
plugin/web-ui/src/lib/: juce-bridge.ts
sdk/activation/: CMakeLists.txt
sdk/activation/include/beatconnect/: Activation.h  MachineId.h
sdk/activation/src/: Activation.cpp
templates/: CMakeLists.txt
templates/.github/workflows/: build.yml
templates/Resources/WebUI/: .gitkeep
templates/Source/: ParameterIDs.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp
templates/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
templates/web/: vite.config.ts
templates/web-ui/: vite.config.ts
templates/web-ui/src/: App.tsx
templates/web-ui/src/hooks/: usePresets.ts
templates/web/src/: App.tsx
